demo/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - port: 8080  # Port that the service should expose internally
      targetPort: 8080  # Port on the container to which traffic will be forwarded
  type: ClusterIP  # Expose the service internally inside the cluster
